--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -15,12 +15,14 @@
 
 {% if not user.is_authenticated %}
 <form action="{% url 'login' %}" method="get">
+    {% csrf_token %}
     <div style="text-align: center;">
         <button class="btn-sm" type="submit" class="btn-primary btn-sm">ログイン</button>
     </div>
 </form>    
 {% else %}
 <form action="{% url 'info_today' %}" method="get">
+    {% csrf_token %}
     <div style="text-align: center;">
         <button class="btn-sm" type="submit" class="btn-primary btn-sm">トップページへ</button>
     </div>
